# differential_kinematics

./: CMakeLists.txt  README.md  package.xml
common/include/: DiffDrive2WKinematics.h  Kinematics.h
common/src/: DiffDrive2WKinematics.cpp
ros/src/: differential_kinematics_node.cpp  drive_bridge.cpp
